--- a/fileto.cabal
+++ b/fileto.cabal
@@ -16,9 +16,12 @@ library
     exposed-modules:  Cip.Vig
                      Util.Rand
                      Util.Time
+                     Cip.BeauMat
+                     Cip.Beau
     build-depends:    base ^>=4.17.2.1,
                      random,
-                     time
+                     time,
+                     containers
     hs-source-dirs:   app
     default-language: GHC2021
 
@@ -28,6 +31,7 @@ executable fileto
     build-depends:    base ^>=4.17.2.1,
                      fileto,
                      random,
-                     time
+                     time,
+                     containers
     hs-source-dirs:   app
     default-language: GHC2021
