--- a/fileto.cabal
+++ b/fileto.cabal
@@ -10,6 +10,7 @@ extra-doc-files:    CHANGELOG.md
 
 common warnings
     ghc-options: -Wall
+dd084c59d10b
 
 library
     import:           warnings
@@ -24,7 +25,7 @@ library
                      Comp.BitArr
                      Comp.FileUtils
                      Comp.OptBinTree
-    build-depends:    base ^>=4.17.2.1,
+    build-depends:    base >=4.17 && <4.18,
                      random,
                      time,
                      containers,
@@ -36,7 +37,7 @@ library
 executable fileto
     import:           warnings
     main-is:          Main.hs
-    build-depends:    base ^>=4.17.2.1,
+    build-depends:    base >=4.17 && <4.18,
                      fileto,
                      random,
                      time,
@@ -57,24 +58,3 @@ executable fileto
         Comp.BitArr
         Comp.FileUtils
         Comp.OptBinTree
-test-suite fileto-test
-    type:                exitcode-stdio-1.0
-    main-is:            Spec.hs
-    hs-source-dirs:     test
-    build-depends:      base >= 4.7 && < 5
-                      , fileto
-                      , hspec
-                      , QuickCheck
-                      , HUnit
-    default-language:   Haskell2010
-    other-modules: Cip.Beau
-                    Cip.BeauMat
-                    Cip.Vig
-                    Util.Rand
-                    Util.Time
-                    Argacts
-                    Comp.Huffman
-                    Comp.Defs
-                    Comp.BitArr
-                    Comp.FileUtils
-                    Comp.OptBinTree
